# My-Own-Projects-ML-DL-LLM-RAG-Agents-CV-DEPLOYMENT-

./: README.md
AI powered fake news detector/: Redme.md  docker-compose.yml  fake news detector ai powered.ipynb
AI powered fake news detector/backend/: Dockerfile  requirements.txt
AI powered fake news detector/extension/: Dockerfile  background.js  content.js  index.html  manifest.json  popup.html  popup.js
AutoAstra/: README.md  pyproject.toml  xaa
AutoAstra/agent/: graph.py
AutoAstra/generated_project/: index.html  script.js  styles.css
COLD EMAIL GENERATOR/: README.md  project.ipynb
COLD EMAIL GENERATOR/app/: chains.py  main.py  portfolio.py
Leagal LLM/: Leagal LLM.ipynb  Redme.md
Text to sql llm application/: README.md  Student.db  mongodb.py  sql.py  sqlite.py
Veritas T5(Anti Generative AI)/: README.md
Veritas T5(Anti Generative AI)/backend/: main.py  requirements.txt
Veritas T5(Anti Generative AI)/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
bus maintenance management system/: app.py  bus_maintenance.csv  forms.py  maintenance.db  models.py  requirements.txt
bus maintenance management system/templates/: admin_dashboard.html  analysis.html  base.html  daily_maintenance.html  driver_dashboard.html  edit_maintenance.html  login_admin.html  login_driver.html  maintenance_team.html  register_admin.html  register_driver.html
hotel recommende system/: Backend.py  app.py
image_verification_project/: main.py  test1.ipynb
media-pulse-dashboard/: README.md  pyproject.toml  replit.nix
(+32 files in other folders)
