[project]
name = "coder-buddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "groq>=0.11.0",
    "langchain>=0.3.3",
    "langchain-core>=0.3.17",
    "langchain-community>=0.3.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.1.6",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
]


